feat: agregar manejo de horarios en confirmaciones y editar, asegurando consistencia entre pantalla y correo
